# app/models/user.rb
@@ -3,6 +3,7 @@ class User < ApplicationRecord
   # :confirmable, :lockable, :timeoutable, :trackable and :omniauthable
 
   include Devise::JWT::RevocationStrategies::JTIMatcher
+  include Rails.application.routes.url_helpers
 
   devise :database_authenticatable, :registerable,
          :recoverable, :rememberable, :validatable, :confirmable,
@@ -15,10 +16,21 @@ class User < ApplicationRecord
   has_many :categories
   has_many :loans
 
+  has_one_attached :avatar
+
+  validates :username, presence: true, uniqueness: true
+
   def attributes
     {
       username: nil,
-      email: ''
+      email: '',
+      avatar_url: nil
     }
+  end
+
+  def avatar_url
+    return nil unless avatar.attached?
+
+    rails_blob_url(avatar)
   end
 end
